Remove signing api
