# src/routes/crypto.js
@@ -1,7 +1,6 @@
 import joi from 'joi';
 import { Router } from 'express';
 import { mnemonic, passphrase } from '../cfg.js';
-import { signTransaction } from '../crypto/sign.js';
 import {
   getTransactionInfo,
   getWalletInfo,
@@ -122,35 +121,6 @@ router.get('/v1/:symbol/wallet/:walletId', async (req, res, next) => {
 
   try {
     const response = await getWalletInfo(symbol, network, walletId);
-
-    res.json(response);
-  } catch (error) {
-    next(error);
-  }
-});
-
-const signTransactionSchema = joi.object({
-  symbol: joi.string().custom(symbolValidator).required(),
-  network: joi.string().custom(networkValidator),
-  data: joi.object().required(),
-});
-
-router.post('/v1/transaction/sign', async (req, res, next) => {
-  const { value, error } = signTransactionSchema.validate(req.body);
-  if (error) {
-    const errorMessages = error.details.map((detail) => detail.message);
-    return res.status(400).json({ errors: errorMessages });
-  }
-
-  const { symbol, network, data } = value;
-
-  try {
-    const response = signTransaction(
-      symbol,
-      network,
-      data,
-      req.app.locals.core,
-    );
 
     res.json(response);
   } catch (error) {
